// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly when no rows match 1`] = `
<div
  className="grid-row"
>
  <div
    className="grid-item--borderless field-label align_right"
    key="bikeField0"
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    Colours
  </div>
  <div
    className="grid-item--borderless field-label "
    key="matchFieldDiv0"
  />
</div>
`;

exports[`it renders correctly when rows match 1`] = `
<div
  className="grid-row"
>
  <div
    className="grid-item--borderless field-label align_right"
    key="bikeField1"
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    Colours
  </div>
  <div
    className="grid-item--borderless field-label "
    key="matchFieldDiv1"
  >
    <UploadMatchedPartType
      key="matchArea10"
      matchIndex={0}
      matched={
        Object {
          "fieldName": "blah",
        }
      }
      undoMapping={[MockFunction]}
    />
  </div>
</div>
`;
